fix addtask-html scrollbar

--- a/styles/addtask.css
+++ b/styles/addtask.css
@@ -5,6 +5,7 @@ body {
     background-color: white;
     font-size: 16px;
     font-weight: 400;
+    overflow: hidden;
 }
 
 .layout {
